src/main/kotlin/com/example/falletterbackend/common/error/exception/FalletterException.kt
package com.example.falletterbackend.common.error.exception

abstract class FalletterException(
    val errorCode: ErrorCode,
) : RuntimeException() {
    val status: Int
        get() = errorCode.status
    override val message: String
        get() = errorCode.message
}